# macropad-audio

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: display.rs  leds.rs  main.rs  synth.rs
